Added icon and removed some unecessary files

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: origami Main.page
 description: Resume for Tiange Wu
-favicon: /assets/img/avatar.JPG
+favicon: /assets/img/main_photo.JPG
 baseurl:
 url:
 
